[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/UI/PNG/red_button05.png" type="Texture" id=1]
[ext_resource path="res://src/UI/CharacterPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -194.5
margin_right = 291.5
margin_bottom = 194.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
modulate = Color( 0.619608, 0.109804, 0.109804, 0.670588 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.630005
margin_top = -0.629974
margin_right = 0.630005
margin_bottom = -0.629974
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseUnpause" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -59.2063
margin_right = 57.5
margin_bottom = -28.2063
text = "Unpause"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 110.5
margin_top = -59.2063
margin_right = 225.5
margin_bottom = -28.2063
text = "Reset Game"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 21.0
margin_bottom = 35.0
text = "Pause Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitiesPanel" parent="Panel" instance=ExtResource( 2 )]
margin_left = -68.0
margin_right = 70.0
[connection signal="pressed" from="Panel/PauseUnpause" to="." method="_on_PauseUnpause_pressed"]
[connection signal="pressed" from="Panel/Reset" to="." method="_on_Reset_pressed"]
[connection signal="holding" from="Panel/AbilitiesPanel" to="." method="_on_AbilitiesPanel_holding"]
